// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/withErrorHandling should render a ErrorMask 1`] = `
<ErrorMask
  errorHeader={
    <FormattedMessage
      defaultMessage="baz"
      description="bar"
      id="foo"
    />
  }
/>
`;

exports[`components/withErrorHandling should render a ErrorMask with sub header 1`] = `
<ErrorMask
  errorHeader={
    <FormattedMessage
      defaultMessage="baz"
      description="bar"
      id="foo"
    />
  }
  errorSubHeader={
    <FormattedMessage
      defaultMessage="baz"
      description="bar"
      id="foo"
    />
  }
/>
`;

exports[`components/withErrorHandling should render an ErrorMask if an error code is passed 1`] = `
<ErrorMask
  errorHeader={
    <FormattedMessage
      defaultMessage="Something went wrong while running this skill or fetching its data."
      id="be.skillUnknownError"
    />
  }
  errorSubHeader={<FormattedMessage />}
/>
`;

exports[`components/withErrorHandling should render an ErrorMask if an error code is passed 2`] = `
<ErrorMask
  errorHeader={
    <FormattedMessage
      defaultMessage="Something went wrong while running this skill or fetching its data."
      id="be.skillUnknownError"
    />
  }
  errorSubHeader={
    <FormattedMessage
      defaultMessage="You are forbidden to see this skill."
      id="be.skillForbiddenError"
    />
  }
/>
`;

exports[`components/withErrorHandling should render an ErrorMask if an error code is passed 3`] = `
<ErrorMask
  errorHeader={
    <FormattedMessage
      defaultMessage="Something went wrong while running this skill or fetching its data."
      id="be.skillUnknownError"
    />
  }
/>
`;

exports[`components/withErrorHandling should render an ErrorMask if an error code is passed 4`] = `
<ErrorMask
  errorHeader={
    <FormattedMessage
      defaultMessage="Something went wrong while running this skill or fetching its data."
      id="be.skillUnknownError"
    />
  }
/>
`;

exports[`components/withErrorHandling should render an ErrorMask if an error code is passed 5`] = `
<ErrorMask
  errorHeader={
    <FormattedMessage
      defaultMessage="Something went wrong while running this skill or fetching its data."
      id="be.skillUnknownError"
    />
  }
/>
`;

exports[`components/withErrorHandling should render an ErrorMask if an error code is passed 6`] = `
<ErrorMask
  errorHeader={
    <FormattedMessage
      defaultMessage="Something went wrong while running this skill or fetching its data."
      id="be.skillUnknownError"
    />
  }
/>
`;

exports[`components/withErrorHandling should render an InlineError, along with the wrapped component 1`] = `
<React.Fragment>
  <InlineError
    title={
      <FormattedMessage
        defaultMessage="baz"
        description="bar"
        id="foo"
      />
    }
  >
    <FormattedMessage
      defaultMessage="baz"
      description="bar"
      id="foo"
    />
  </InlineError>
  <WrappedComponent />
</React.Fragment>
`;

exports[`components/withErrorHandling should render the wrapped component 1`] = `<WrappedComponent />`;
